# hdx-cod-ab-checker

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __main__.py  attributes.py  config.py  images.py  utils.py
app/checks/: __main__.py  dates.py  geometry_gaps.py  geometry_overlaps_self.py  geometry_valid.py  geometry_within_parent.py  languages.py  table_names.py  table_names_config.py  table_names_utils.py  table_other.py  table_pcodes.py
app/download/: boundaries.py  meta.py  updated.py
app/scores/: __main__.py  geometry_areas.py  geometry_topology.py  geometry_validity.py  table_areas.py  table_dates.py  table_languages.py  table_names.py  table_other.py  table_pcodes.py
app/style/: __main__.py  scores.py
templates/: Data_Evaluation_Checklist_ISO3_yyyymm.xlsx
