[project]
name = "hdx-scraper-cod-qc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.8"
dependencies = [
    "defusedxml",
    "geopandas",
    "httpx[http2]",
    "langcodes",
    "pandas[excel,plot]",
    "pyarrow",
    "pycountry",
    "pyicu==2.15.2",
    "python-dotenv",
    "quantulum3[classifier]",
    "shapely",
    "tenacity",
    "tqdm",
]

[dependency-groups]
dev = ["pre-commit", "pytest-cov", "pytest", "ruff", "taskipy"]

[tool.taskipy.tasks]
# uv run task app
app = "python -m app"
test = "pytest --rootdir=. --junitxml=test-results.xml --cov --no-cov-on-fail --cov-report=lcov --cov-report=term-missing"
export = "uv sync -q && uv export -o requirements.txt -q --no-dev --no-emit-project --no-hashes && uv export -o requirements-dev.txt -q --no-emit-project --no-hashes"
ruff = "ruff format && ruff check && ruff format"
